# rhdp-publishing-house

./: .coverage  .gitmodules  BACKLOG.md  CLAUDE.md  README.md  WORKLOG.md  conftest.py  mkdocs.yml  pyproject.toml  requirements-test.txt  skills
.claude-plugin/: plugin.json
.github/: CODEOWNERS
.github/workflows/: docs.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: PH-COMMON-RULES.md  _config.yml  dashboard-deployment.md  dashboard.md  executive-summary.md  express-mode-overview.md  getting-started.md  how-it-works.md  index.md  jira-integration-overview.md  overview.md  portal-deployment.md  portal.md
docs/admin/: PH-COMMON-RULES.md  central-deployment.md  deployment.md  mcp-auth.md  operations.md  portal-deployment.md  rcars-service-auth.md
docs/api/: mcp-tools.md
docs/architecture/: central.md  express-mode-overview.md  hosted-workspace-overview.md  jira-integration-overview.md  jira-integration.md  lifecycle-phases.md  phase-engine-explained.md  (+6 more)
graphify-out/: .graphify_chunk_0.json  .graphify_chunk_1.json  .graphify_chunk_2.json  .graphify_chunk_3.json  .graphify_chunk_4.json  .graphify_chunk_5.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
rhdh/: DEPLOYED.md  DEPLOYMENT.md  HTTP_ACTION_NEEDED.md  README.md  REGISTER_TEMPLATE.md  SUMMARY.md
scripts/: ph-seed.py  ph-test.py
template/: README.md
test/: test_fixtures.py  test_mcp_mock.py  test_runner.py  test_validator.py
(+135 files in other folders)
